# xzptool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_sln.bat
.github/workflows/: build.yml
ext/: _ext.cmake
ext/jcalg1/: CMakeLists.txt
ext/jcalg1/include/: jcalg1.hpp
res/: create_ico.sh  logo.xcf
src/: config.h.in  xzptool.cpp
